fix: changing hyperlinks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <header>
   <nav>
     <div class="logo">
-      <a href="#" target="_blank" rel="noopener noreferrer">docs</a>
+      <a href="https://github.com/cezardev07/spa-using-angular" target="_blank" rel="noopener noreferrer">docs</a>
     </div>
     <ul>
       <button [routerLink]="['']" >imagens</button>
       <button [routerLink]="['about']" >about</button>
-      <a href="#" target="_blank" rel="noopener noreferrer">github</a>
+      <a href="https://github.com/cezardev07" target="_blank" rel="noopener noreferrer">github</a>
     </ul>
   </nav>
 </header>
@@ -27,7 +27,7 @@
 
 <footer>
   <p>
-    <a href="#" target="_blank" rel="noopener noreferrer">
+    <a href="https://github.com/cezardev07" target="_blank" rel="noopener noreferrer">
       Cezar Pereira
     </a> © Todos direitos reservados.
   </p>
