--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -19,7 +19,7 @@
       </li>
     </ol>
     <div class="link">
-      <a href="#" target="_blank" rel="noopener noreferrer">você pode acessar o código fonte através desse link</a>
+      <a href="https://github.com/cezardev07/spa-using-angular" target="_blank" rel="noopener noreferrer">você pode acessar o código fonte através desse link</a>
     </div>
   </div>
 </div>
